[project]
name = "bearly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Florin Gogianu", email = "florin.gogianu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "scipy>=1.16.3",
]

[project.optional-dependencies]
plots = [
    "marimo>=0.18.4",
    "plotnine>=0.15.2",
    "pyarrow>=22.0.0",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "bearly[plots]",
    "basedpyright>=1.37.0",
    "ruff>=0.14.10",
    "marimo[lsp]>=0.18.4",
    "nodejs-bin[cmd]>=18.4.0a4",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
